--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,6 +1,6 @@
 - name: Install Nginx
   hosts: Web
-  #become: true
+  become: true
   tasks:
     - name: Install Nginx
       ansible.builtin.yum:
