--- a/01-sample.yml
+++ b/01-sample.yml
@@ -7,8 +7,8 @@
         name: httpd
         state: latest
 
-    - name: Start Service
-      ansible.builtin.systemd_service:
+    - name: Start Nginx
+      ansible.builtin.systemd:
         state: started
         name: nginx
         enabled: true
