--- a/01-sample.yml
+++ b/01-sample.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Install Nginx
       ansible.builtin.yum:
-        name: httpd
+        name: nginx
         state: latest
 
     - name: Start Nginx
