--- a/roles/parameters-store.yml
+++ b/roles/parameters-store.yml
@@ -2,6 +2,6 @@
   hosts: localhost
   connection: local
   tasks:
-    - name: recommend to use with aws_ssm lookup plugin
+    - name: fetch some value
       ansible.builtin.debug:
-      msg: "{{ lookup('amazon.aws.aws_ssm', 'rds.dev.database_name', region='us-east-1') }}"
+        msg: "{{ lookup('amazon.aws.aws_ssm', 'rds.dev.database_name', region ='us-east-1') }}"
